# PixelNest

./: LICENSE  README.md  app.js  index.html  package-lock.json  package.json  server.js  styles.css  vite.config.js
.github/workflows/: release.yml
scripts/: create-cat-spritesheet.js  create-icon.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
