[package]
name = "pixelnest"
version = "0.1.3"
description = "A tiny pixel desktop pet."
authors = ["PixelNest"]
edition = "2021"

[lib]
name = "pixelnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
